<resources>
    <string name="app_name">TEST</string>

    <string name="login_error">无法登录?</string>
    <string name="register_">申请注册</string>
    <string name="login_">登 录</string>
    <string name="username_">用户名/邮箱/手机号</string>
    <string name="password_">密 码</string>
    <string name="direct_messages">私信</string>
    <string name="get_in">上车</string>
    <string name="tip">龙是真实存在的，我朋友前两天才被一条龙服务过。</string>
    <string name="lv">Lv.0</string>
    <string name="time_axis"><![CDATA[时间轴 >]]></string>
    <string name="fate_now">每周一影</string>
    <string name="next_fate">下周投票</string>
    <string name="vote">投票</string>
    <string name="check_for_updates">检查更新</string>
    <string name="clean_up_the_cache">清理缓存</string>
    <string name="test_home">实验室</string>
    <string name="more_article"><![CDATA[更多文章 >]]></string>
</resources>
