<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_light"
            app:elevation="@dimen/dp_0">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextAppearance="@dimen/sp_16"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


        </android.support.design.widget.AppBarLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/check_for_updates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:padding="@dimen/dp_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_for_updates"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/gray_light"
            android:gravity="center"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_10"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/clean_up_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_up_the_cache"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/gray_light"
            android:gravity="center"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_10"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/test_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_home"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/gray_light"
            android:gravity="center"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_10"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

</LinearLayout>
